--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
      <td><img src="Me.png" alt="Kutenda Makanda in his anime" width="200" height="200"></td>
      <td><h1>Kutenda Makanda</h1>    
       <em>
-      <p>Co-Leader of C Destroyers in <strong><a href="https://supercell.com/en/games/clashofclans/">Clash of Clans</a></strong></p>
+      <p>Former Co-Leader of C Destroyers in <strong><a href="https://supercell.com/en/games/clashofclans/">Clash of Clans</a></strong></p>
       </em>
-      <p>I am a student and I go to school for some odd reason</p></td>
+      <p>I am a student and I go to college for some odd reason</p></td>
     </tr>
   </table>
     
   <hr Size="3" noshade>
   <br>
   <h3>Education</h3>
+    <del>
   <P>I Go to Crawford and take:</P>
   <ul>
    <li>EGD</li>
    <Li>Art</Li>
    <Li>Bussiness</Li>
    <li>History</li>
+      </del>
  </ul>
  <hr size="3" noshade>
   <h3>Work Experience</h3>
