--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
    <Li>Bussiness</Li>
    <li>History</li>
       </del>
+      <P>I Go to Bolton College and take:</P>
+   <li> Essential Digital Skills Entry 3 and Level 1</li>
  </ul>
  <hr size="3" noshade>
   <h3>Work Experience</h3>
